adding NA decision figure

--- a/example1.ipynb
+++ b/example1.ipynb
@@ -934,133 +934,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>transaction_date</th>\n",
-       "      <th>transaction_type</th>\n",
-       "      <th>mcc_group</th>\n",
-       "      <th>amount_n26_currency</th>\n",
-       "      <th>direction</th>\n",
-       "      <th>agent</th>\n",
-       "      <th>day</th>\n",
-       "      <th>month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>a78884f5e76951188c1e719d4956773a</td>\n",
-       "      <td>2016-01-02</td>\n",
-       "      <td>DT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>350</td>\n",
-       "      <td>Out</td>\n",
-       "      <td>Bank Account</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>b0333294fef6ff1299102a70ad46b126</td>\n",
-       "      <td>2016-01-02</td>\n",
-       "      <td>DT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>202</td>\n",
-       "      <td>Out</td>\n",
-       "      <td>Bank Account</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7b8d2a2780adae0cd0c248e92c1b28dc</td>\n",
-       "      <td>2016-01-02</td>\n",
-       "      <td>DT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>291</td>\n",
-       "      <td>Out</td>\n",
-       "      <td>Bank Account</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>cc4abaa500f7db4390ae3f02bd36d805</td>\n",
-       "      <td>2016-01-02</td>\n",
-       "      <td>DT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>214</td>\n",
-       "      <td>Out</td>\n",
-       "      <td>Bank Account</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>49b99d1d5ba028566639e8b3eb7c055b</td>\n",
-       "      <td>2016-01-02</td>\n",
-       "      <td>DT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>272</td>\n",
-       "      <td>Out</td>\n",
-       "      <td>Bank Account</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            user_id transaction_date transaction_type  \\\n",
-       "0  a78884f5e76951188c1e719d4956773a       2016-01-02               DT   \n",
-       "1  b0333294fef6ff1299102a70ad46b126       2016-01-02               DT   \n",
-       "2  7b8d2a2780adae0cd0c248e92c1b28dc       2016-01-02               DT   \n",
-       "3  cc4abaa500f7db4390ae3f02bd36d805       2016-01-02               DT   \n",
-       "4  49b99d1d5ba028566639e8b3eb7c055b       2016-01-02               DT   \n",
-       "\n",
-       "   mcc_group  amount_n26_currency direction         agent  day  month  \n",
-       "0        NaN                  350       Out  Bank Account    2      1  \n",
-       "1        NaN                  202       Out  Bank Account    2      1  \n",
-       "2        NaN                  291       Out  Bank Account    2      1  \n",
-       "3        NaN                  214       Out  Bank Account    2      1  \n",
-       "4        NaN                  272       Out  Bank Account    2      1  "
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_train_main.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1068,12 +941,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# data_train_main_fill[data_train_main_fill['user_id']=='000295594379774ab9ac2c78c946d615']"
+    "![title](./img/na_fill.png)"
    ]
   },
   {
@@ -2340,7 +2211,7 @@
    "source": [
     "# Methods\n",
     "\n",
-    "![title](../scripts/img/lr.png)\n",
+    "![title](./img/lr.png)\n",
     "## 1. LR (logistic regression): \n",
     "we use the LR methods as baseline and in addition, we add penalties to the cost function to balance the target variable.\n",
     "\n",
